# 2D-Graphics-Implementation

./: CMakeLists.txt  main.cpp
CardinalSpline/: CMakeLists.txt
Classes/: Paint.h  Point.h
Clipping/Circle/: IsPointIn.h  LineClip.h  PointClip.h
Clipping/Rectangle&Square/: LineClipping.h  PointClipping.h  PolygonClipping.h
Curves/: Bezier.h  CardinalSplineCurve.h
Files/Cursors/: barca.cur  cat.cur  clown.cur  cursor.cur  dazaiHand.cur  goose.cur  justAGirl.cur  pusheen.cur  smile.cur  titanHand.cur  tom.cur
Files/SavedFiles/: b.txt  c.txt  cb.txt  master  test.txt
Filling/: ConvexFill.cpp  ConvexFill.h  FillingWithBezierCurve.h  FillingWithHermit Curve.h  GeneralPolygonFill.cpp  GeneralPolygonFill.h  iterativeFloodFill.cpp  iterativeFloodFill.h  recursiveFloodFill.cpp  recursiveFloodFill.h
Shapes/Circle/: CircleDirect.h  CircleIterativePolar.h  CircleMidpoint.h  CircleModifiedMidpoint.h  CirclePolar.h  FillCircleWithCircles.h  FillCircleWithLines.h  eightPoint.h
Shapes/Ellipse/: MidpointEllipse.cpp  MidpointEllipse.h  draw4points.h  polarEllipse.c  polarEllipse.h  standardEllipse.cpp  standardEllipse.h
Shapes/Line/: BresenhamLine.h  DDALine.h  InterpolatedLine.h
Shapes/Rectangle/: Rectangle.h
Shapes/Square/: Square.h
ToolBar/: ColorPicker.h  CursorChanger.h  Draw.h  MenuIDs.h  ToolBar.h
Utilities/: fileUtilitis.h  utilityPicker.h
